Render `ConversationListItem` React component

--- a/background.html
+++ b/background.html
@@ -860,6 +860,9 @@
   <script type='text/javascript' src='js/views/install_choice_view.js'></script>
   <script type='text/javascript' src='js/views/import_view.js'></script>
 
+  <!-- React views -->
+  <script type='text/javascript' src='js/views/react/ConversationListItem.js'></script>
+
   <script type='text/javascript' src='js/wall_clock_listener.js'></script>
   <script type='text/javascript' src='js/rotate_signed_prekey_listener.js'></script>
   <script type='text/javascript' src='js/keychange_listener.js'></script>
