Render basic conversation list view

--- a/background.html
+++ b/background.html
@@ -862,6 +862,7 @@
 
   <!-- React views -->
   <script type='text/javascript' src='js/views/react/ConversationListItem.js'></script>
+  <script type='text/javascript' src='js/views/react/ConversationList.js'></script>
 
   <script type='text/javascript' src='js/wall_clock_listener.js'></script>
   <script type='text/javascript' src='js/rotate_signed_prekey_listener.js'></script>
