Organize React components

--- a/background.html
+++ b/background.html
@@ -804,6 +804,12 @@
   <script type='text/javascript' src='js/signal_protocol_store.js'></script>
   <script type='text/javascript' src='js/libtextsecure.js'></script>
 
+  <!-- React -->
+  <script type='text/javascript' src='js/react/namespace.js'></script>
+  <script type='text/javascript' src='js/react/hashCode.js'></script>
+  <script type='text/javascript' src='js/react/components/ConversationListItem.js'></script>
+  <script type='text/javascript' src='js/react/components/ConversationList.js'></script>
+
   <script type='text/javascript' src='js/focus_listener.js'></script>
   <script type='text/javascript' src='js/notifications.js'></script>
   <script type='text/javascript' src='js/delivery_receipts.js'></script>
@@ -859,10 +865,6 @@
   <script type='text/javascript' src='js/views/app_view.js'></script>
   <script type='text/javascript' src='js/views/install_choice_view.js'></script>
   <script type='text/javascript' src='js/views/import_view.js'></script>
-
-  <!-- React views -->
-  <script type='text/javascript' src='js/views/react/ConversationListItem.js'></script>
-  <script type='text/javascript' src='js/views/react/ConversationList.js'></script>
 
   <script type='text/javascript' src='js/wall_clock_listener.js'></script>
   <script type='text/javascript' src='js/rotate_signed_prekey_listener.js'></script>
